create map, pan with scroll

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   <body style="margin: 0; height: 100vh; overflow: hidden">
     <svg>
       <g id="zoom">
-        <g id="translate"></g>
+        <g id="translate">
+          <g id="map"></g>
+        </g>
       </g>
     </svg>
     <script type="module" src="/src/main.ts"></script>
