--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       <g id="zoom">
         <g id="translate">
           <g id="map"></g>
+          <g id="players"></g>
         </g>
       </g>
     </svg>
