--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@400;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/styles.css" />
   </head>
-  <body>
+  <body style="background-color: black;">
     <svg>
       <g id="zoom">
         <g id="translate">
