--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <g id="zoom">
         <g id="translate">
           <g id="map"></g>
-          <g id="players"></g>
+          <g id="players" style="pointer-events: none;"></g>
         </g>
       </g>
     </svg>
