selected piece hud

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <g id="translate">
           <g id="map"></g>
           <g id="players" style="pointer-events: none;"></g>
+          <g id="hud" style="pointer-events: none;"></g>
         </g>
       </g>
     </svg>
