roll the die and lots of improvements

--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
           <g id="map"></g>
           <g id="players" style="pointer-events: none;"></g>
           <g id="hud" style="pointer-events: none;"></g>
+          <g id="die"></g>
         </g>
       </g>
     </svg>
+    <div id="overlay"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
