--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Malefiz Online</title>
     <meta name="description" content="Play Malefiz / Barricade online with your friends or against AI.">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@400;900&display=swap" rel="stylesheet">
+    <link rel='preload' as='style' href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@400;900&display=swap" >
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@400;900&display=swap" >
     <link rel="stylesheet" href="/styles.css" />
   </head>
   <body style="background-color: black;">
