--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <link rel="stylesheet" href="/styles.css" />
   </head>
   <body style="background-color: black;">
+    <div id="loading" style="position: absolute; top: 0; width: 100vw; height: 100vh; display: flex; justify-content: center; align-items: center; color: white;">
+      Loading...
+    </div>
     <svg>
       <g id="zoom">
         <g id="translate">
