--- a/new/index.html
+++ b/new/index.html
@@ -12,5 +12,10 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <style>
+      body {
+        background-color: black;
+      }
+    </style>
   </body>
 </html>
