--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Malefiz (Barricade) Online</title>
+    <meta
+      name="description"
+      content="Play Malefiz (Barricade) Online free with friends or against AI."
+    />
   </head>
   <body>
     <div id="app"></div>
